Retrofit + summoner lookup implementatie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Stats For League</string>
     <string name="championsButton">Champions</string>
     <string name="title_activity_champions">ChampionsActivity</string>
+    <string name="summonersButton">Summoners</string>
+    <string name="thirdButton">Third</string>
 </resources>
