--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,20 +4,19 @@
     <string name="title_activity_champions">ChampionsActivity</string>
     <string name="summonersButton">Summoners</string>
     <string name="thirdButton">Third</string>
-
     <string name="homeButton">Home</string>
-
     <string name="searchChampionInfoButton">Info</string>
-
-    <!--fragment_home-->
     <string name="welcomeText">Welcome to the app!</string>
     <string name="browseText">Feel free to browse through the tabs</string>
-
-    <!--fragment_search_summoner-->
     <string name="summonerText">Find your summoner</string>
     <string name="usernameTextField">Enter username</string>
     <string name="searchSummonerButton">Search</string>
-
-    <!--fragment_champions-->
     <string name="championText">This is the champion information screen</string>
+    <string name="summoner_name">Summoner name: %1$s</string>
+    <string name="summoner_level">Summoner level: %1$s</string>
+    <string name="summoner_account_id">Summoner account id: %1$s</string>
+    <string name="summoner_summoner_id">Summoner summoner id: %1$s</string>
+    <string name="summoner_profile_icon_id">Summoner profile icon id: %1$s</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
