--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,10 @@
     <string name="summoner_profile_icon_id">Summoner profile icon id: %1$s</string>
     <string name="action_settings">Settings</string>
 
+    <string name="pref_color_label">App color</string>
+    <string name="pref_color_label_red">Red</string>
+    <string name="pref_color_label_purple">Purple</string>
+    <string name="pref_color_key">color</string>
+    <string name="pref_color_value_red">red</string>
+    <string name="pref_color_value_purple">purple</string>
 </resources>
